--- a/Forge.Web/Styles/_colors.scss
+++ b/Forge.Web/Styles/_colors.scss
@@ -46,7 +46,7 @@ $color-tertiary-20: mix($color-tertiary, white, 50%);
 $color-tertiary-10: mix($color-tertiary, white, 30%);
 
 // Action -------------------------------------------
-$color-action: $color-secondary;
+$color-action: #deb040;
 $color-action-90: mix($color-action, black, 45%);
 $color-action-80: mix($color-action, black, 50%);
 $color-action-70: mix($color-action, black, 80%);
