--- a/Forge.Web/Styles/Components/_banners.scss
+++ b/Forge.Web/Styles/Components/_banners.scss
@@ -8,7 +8,7 @@
 .banner {
     display: table;
     width: 100%;
-    background: rgba(white, .2);
+    background: $color-primary-10;
 
     .banner__content {
         display: table-cell;
@@ -20,6 +20,7 @@
         display: table-cell;
         width: 1%;
         padding: 10px;
+        color: $color-secondary-50;
 
         &:after {
             font-family: FontAwesome; 
