--- a/Forge.Web/Styles/Components/_tabs.scss
+++ b/Forge.Web/Styles/Components/_tabs.scss
@@ -11,7 +11,7 @@ $nav-slide-background:      $color-primary-10;
 // Units
 // --------------------------------
 $nav-arrow-size: 10px;
-$border-color: $color-primary-10;
+$border-color: $color-background-menu;
 
 // MOBILE ( < 720px  )
 // ================================
