--- a/Forge.Web/Styles/_colors.scss
+++ b/Forge.Web/Styles/_colors.scss
@@ -62,3 +62,6 @@ $color-action-10: mix($color-action, white, 30%);
 $font-color-body: $color-primary-20;
 $font-color-header: $color-primary-80;
 $font-color-placeholder: $color-primary-20;
+
+$color-background-menu: $color-primary-10;
+$color-background-menu-2: $color-primary-20;
