--- a/Forge.Web/Styles/_helpers.scss
+++ b/Forge.Web/Styles/_helpers.scss
@@ -44,7 +44,7 @@
 }
 
 .panel {
-    background: $color-primary-10;
+    background: rgba(white, 0.5);
     padding: 10px;
     border-radius: 3px;
     margin: 10px 0;
