--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -82,7 +82,7 @@ table {
     text-shadow: 2px 2px rgba(0, 0, 0, 0.2); }
 
 .panel {
-  background: whitesmoke;
+  background: rgba(255, 255, 255, 0.5);
   padding: 10px;
   border-radius: 3px;
   margin: 10px 0; }
@@ -106,7 +106,7 @@ html {
     padding-top: 55px;
     min-height: 100%;
     height: 100%;
-    background-color: #e6e6e6;
+    background-color: #e0e0e0;
     overflow-x: hidden; }
 
 a {
@@ -166,9 +166,9 @@ b {
   background-image: -ms-linear-gradient(top, #0e7aa4 0, #0f81ad 100%);
   background-image: linear-gradient(to bottombottom, #0e7aa4 0, #0f81ad 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e7aa4', endColorstr='#0f81ad',GradientType=0 );
-  -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2); }
+  -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3); }
   #nav.sticky {
     background-color: #6f6f6f; }
   #nav > .container {
@@ -538,10 +538,6 @@ h5 {
   .designer__views h3 {
     padding: 0 0 10px 20px; }
 
-.designer__list,
-.designer__stage {
-  background-color: #e4e4e4; }
-
 .designer__list {
   position: absolute;
   top: 0;
@@ -571,6 +567,8 @@ h5 {
     border-top-left-radius: 3px; }
   .designer__list.designer__list--empty {
     display: none; }
+    .designer__list.designer__list--empty ~ .designer__stage .stage__menu {
+      display: none; }
   @media screen and (max-width: 720px) {
     .designer__list.designer__list--closed {
       -moz-transform: translateX(-90%);
@@ -682,9 +680,9 @@ h5 {
                     @include arrow-right(20px, $bg-list-item--active);
                 }*/ }
 
-.designer__menu {
+.designer__tiles {
   display: flex; }
-  .designer__menu .designer__tile {
+  .designer__tiles .designer__tile {
     height: 100px;
     width: 100px; }
 
@@ -778,7 +776,8 @@ select {
 .banner {
   display: table;
   width: 100%;
-  background: whitesmoke; }
+  background: #eeeeee;
+  border-left: 1px dashed #c7c7c7; }
   .banner .banner__content {
     display: table-cell;
     padding: 10px;
