--- a/Forge.Web/Styles/Components/_designer.scss
+++ b/Forge.Web/Styles/Components/_designer.scss
@@ -27,12 +27,6 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
 }
 
-.designer__list,
-.designer__stage {
-    background-color: $color-primary-30;
-   // min-height: 800px;
-}
-
 // __List
 // ---------------------------
 .designer__list{
@@ -43,7 +37,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     width: 200px;
     padding: 10px;
     border: 1px solid $color-primary-60;
-    background: $color-primary-10;
+    background: $color-background-menu;
     border-top-right-radius: 3px;
     min-height: 400px;
     z-index: 10;
@@ -62,7 +56,10 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     h3 { border-top-left-radius: 3px; }
 
     // --Empty
-    &.designer__list--empty{ display: none; }
+    &.designer__list--empty{ 
+        display: none;
+        &~.designer__stage .stage__menu { display: none; }
+    }
 
     // --Closed
     &.designer__list--closed{
@@ -201,7 +198,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
 // __Menu
 // ---------------------------
-.designer__menu{
+.designer__tiles{
     display: flex;
     .designer__tile{
         height: 100px;
