--- a/Forge.Web/Styles/Components/_headings.scss
+++ b/Forge.Web/Styles/Components/_headings.scss
@@ -14,7 +14,7 @@ h3 {
     font-weight: bold;
     padding: 10px;
     font-size: 20px;
-    background-color: $color-primary-10;
+    background-color: $color-background-menu;
 }
 
 h4 { 
