--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -27,7 +27,7 @@ html {
         padding-top: $size-nav-height;
         min-height: 100%;
         height: 100%;
-        background-color: mix($color-primary-30, $color-primary-20, 80%);
+        background-color: $color-primary-40;
         overflow-x: hidden;
     }
 }
