--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -98,7 +98,7 @@ html {
   box-sizing: border-box;
   min-height: 100%;
   height: 100%;
-  font-family: Arial;
+  font-family: 'Work Sans', sans-serif;
   color: #6f6f6f;
   overflow-x: hidden; }
   html body {
@@ -853,4 +853,8 @@ select {
 
 .expandable.expandable--closed .expandable__button .expandable__icon:after {
   transform: rotate(-90deg); }
+
+.spec-runner__error {
+  font-size: 10px;
+  color: #9a4040; }
 
