--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -18,7 +18,7 @@ html {
     min-height: 100%;
     height: 100%;
 
-    font-family: Arial;
+    font-family: 'Work Sans', sans-serif;
     color: $color-primary-80;
     overflow-x: hidden;
 
@@ -67,3 +67,4 @@ b { font-weight: 600; }
 @import 'Components/banners';
 @import 'Components/sortables';
 @import 'Components/expandables';
+@import 'Components/spec-runner';
