--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -68,3 +68,4 @@ b { font-weight: 600; }
 @import 'Components/sortables';
 @import 'Components/expandables';
 @import 'Components/spec-runner';
+@import 'Components/overlay';
