--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -858,3 +858,14 @@ select {
   font-size: 10px;
   color: #9a4040; }
 
+.overlay__anchor {
+  position: relative; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, 0.5); }
+
